Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,7 +15,7 @@ variables:
   solution: '**/*.sln'
   buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
-  BuildVersion: $(Version.MajorMinor)  
+  Version.MajorMinor: 1.0.0
 
 steps:
 - task: NuGetToolInstaller@0
