--- a/src/XboxFtp.Core/XboxFtp.Core.csproj
+++ b/src/XboxFtp.Core/XboxFtp.Core.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="DotNetZip" Version="1.13.3" />
     <PackageReference Include="Serilog" Version="2.8.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
+    <PackageReference Include="Serilog.Sinks.File" Version="4.0.0" />
   </ItemGroup>
 
 </Project>
