--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -40,4 +40,5 @@ steps:
     feedsToUse: 'select'
     packagesToPush: '$(Build.ArtifactStagingDirectory)/*.nupkg'
     nuGetFeedType: 'internal'
+    publishVstsFeed: 'https://nrjsolutions.pkgs.visualstudio.com/_packaging/NrjSolutions/nuget/v3/index.json'
     versioningScheme: 'off'
