--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,6 +20,11 @@ variables:
 steps:
 - task: NuGetToolInstaller@0
 
+- task: PowerShell@2
+  inputs:
+    targetType: 'inline'
+    script: 'nuget.exe sources Add -Name "xboxftp" -Source "https://nrjsolutions.pkgs.visualstudio.com/_packaging/xboxftp/nuget/v3/index.json"'
+
 - task: DotNetCoreCLI@2
   inputs:
     command: 'build'
