Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,3 +31,11 @@ steps:
     projects: '$(solution)'
     feedsToUse: 'select'
     versioningScheme: 'off'
+
+- task: DotNetCoreCLI@2
+  inputs:
+    command: 'publish'
+    majorVersion: 1
+    minorVersion: 0
+    patchVersion: 0
+    publishWebProjects: false
