--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,6 +35,7 @@ steps:
 - task: DotNetCoreCLI@2
   inputs:
     command: 'publish'
+    projects: '$(solution)'
     zipAfterPublish: true
     majorVersion: 1
     minorVersion: 0
