--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,8 +37,14 @@ steps:
     command: 'publish'
     projects: '$(solution)'
     zipAfterPublish: true
-    majorVersion: 1
-    minorVersion: 0
-    patchVersion: 0
     publishWebProjects: false
     arguments: --runtime win-x86
+
+- task: ArchiveFiles@2
+  inputs:
+    rootFolderOrFile: '$(Build.BinariesDirectory)'
+    includeRootFolder: true
+    archiveType: 'zip'
+    archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
+    replaceExistingArchive: true
+    verbose: true
