Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,3 +48,8 @@ steps:
     archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
     replaceExistingArchive: true
     verbose: true
+
+- task: PowerShell@2
+  inputs:
+    targetType: 'inline'
+    script: 'nuget.exe push -Source "https://f.feedz.io/nrjsolutions/release-apps/nuget" -ApiKey T-azoHF9mSz3msbKgVNykgFAANGGJCmhhkQAE "$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip"'
