--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,4 +48,4 @@ steps:
   displayName: "Publish to Feedz.io"
   inputs:
     targetType: 'inline'
-    script: 'nuget.exe push -Source "https://f.feedz.io/nrjsolutions/release-apps/nuget" -ApiKey $(feedz-io-apikey) "$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip"'
+    script: 'nuget.exe push -Source "https://f.feedz.io/nrjsolutions/release-apps/nuget" -ApiKey $(feedz-io-apikey) "$(Build.ArtifactStagingDirectory)/XboxFtpUploader.1.0.0.$(Build.BuildId).zip"'
