--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,10 +44,19 @@ steps:
     replaceExistingArchive: true
     verbose: true
 
-- task: PowerShell@2
-  displayName: "Publish to Feedz.io"
+# - task: PowerShell@2
+#   displayName: "Publish to Feedz.io"
+#   inputs:
+#     targetType: 'inline'
+#     script: '
+#     write-output $(feedz-io-apikey)
+#     nuget.exe push -Source "https://f.feedz.io/nrjsolutions/release-apps" -ApiKey $(feedz-io-apikey) "$(Build.ArtifactStagingDirectory)/XboxFtpUploader.1.0.0.$(Build.BuildId).zip"'
+
+- task: cURLUploader@2
   inputs:
-    targetType: 'inline'
-    script: '
-    write-output $(feedz-io-apikey)
-    nuget.exe push -Source "https://f.feedz.io/nrjsolutions/release-apps/nuget" -ApiKey $(feedz-io-apikey) "$(Build.ArtifactStagingDirectory)/XboxFtpUploader.1.0.0.$(Build.BuildId).zip"'
+    files: '$(Build.ArtifactStagingDirectory)/XboxFtpUploader.1.0.0.$(Build.BuildId).zip'
+    authType: 'UserAndPass'
+    username: 'bob'
+    password: '$(feedz-io-apikey)'
+    url: 'https://f.feedz.io/nrjsolutions/release-apps'
+    remotePath: 
