Add folder publishing profile

--- a/src/XboxFtp.Console/XboxFtp.Console.csproj
+++ b/src/XboxFtp.Console/XboxFtp.Console.csproj
@@ -29,4 +29,8 @@
     <ProjectReference Include="..\XboxFtp.Core\XboxFtp.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Properties\PublishProfiles\" />
+  </ItemGroup>
+
 </Project>
