--- a/src/XboxFtp.Console/XboxFtp.Console.csproj
+++ b/src/XboxFtp.Console/XboxFtp.Console.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="local-template.yaml">
+    <Content Include="settings.ini">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
@@ -21,9 +21,16 @@
     <PackageReference Include="Serilog.Sinks.File" Version="4.0.0" />
     <PackageReference Include="SimpleInjector" Version="4.6.0" />
     <PackageReference Include="YamlDotNet" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="3.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="3.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="3.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="3.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Ini" Version="3.1.1" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Adapter.Notifier.Serilog\Adapter.Notifier.Serilog.csproj" />
+    <ProjectReference Include="..\Adapter.Notifier.TerminalGui\Adapter.Notifier.TerminalGui.csproj" />
     <ProjectReference Include="..\Adapter.Persistence.Ftp\Adapter.Persistence.Ftp.csproj" />
     <ProjectReference Include="..\Adapter.Persistence.InMemory\Adapter.Persistence.InMemory.csproj" />
     <ProjectReference Include="..\XboxFtp.Core\XboxFtp.Core.csproj" />
