--- a/src/Adapter.Persistence.Ftp/Adapter.Persistence.Ftp.csproj
+++ b/src/Adapter.Persistence.Ftp/Adapter.Persistence.Ftp.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentFTP" Version="33.0.3" />
+    <PackageReference Include="Polly" Version="7.2.1" />
     <PackageReference Include="Serilog" Version="2.10.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
   </ItemGroup>
