--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,7 +21,6 @@ jobs:
       run: dotnet restore
     - name: Build
       run: dotnet build --no-restore
-    - name: Test
-      run: dotnet test .\tests\Adapter.Persistence.Ftp.Tests.Unit\ --no-build --verbosity normal
-           dotnet test .\tests\XboxFtp.Core.Tests.Unit\ --no-build --verbosity normal
+    - name: Run Unit Tests
+      run: dotnet vstest (Get-ChildItem -recurse -File *.Tests.Unit.dll | ? { $_.FullName -notmatch "\\obj\\?" -and $_.FullName -notmatch "\\ref\\?" })
 
